--- a/build.xml
+++ b/build.xml
@@ -4,70 +4,77 @@
               To include a user specific buildfile here, simply create one in the same
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. -->
-<project basedir="." default="build" name="TimadorusWebApp"
-	xmlns:ivy="antlib:org.apache.ivy.ant" >
-	
-    <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="C:/Program Files (x86)/eclipse-jee-galileo-win32/eclipse"/>
-    <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.6"/>
-    <property name="source" value="1.6"/>
-	
-	<property name="ivy.dir" value="${basedir}/ivy"/>
-	<property name="ivy.settings.file" value="${ivy.dir}/ivysettings.xml"/>
-	<property name="ivy.cache.dir" value="${ivy.dir}/cache"/>
+<project basedir="." default="build" name="TimadorusWebApp" xmlns:ivy="antlib:org.apache.ivy.ant">
 
-    <path id="GWT SDK [gwt-2.0.3 - 2.0.3].libraryclasspath">
-    	<fileset dir="${ivy.cache.dir}">
-			<include name="**/*.jar"/>
+	<property environment="env" />
+	<property name="ECLIPSE_HOME" value="C:/Program Files (x86)/eclipse-jee-galileo-win32/eclipse" />
+	<property name="debuglevel" value="source,lines,vars" />
+	<property name="destination" value="war/WEB-INF/classes" />
+	<property name="target" value="1.6" />
+	<property name="source" value="1.6" />
+
+	<property name="ivy.dir" value="${basedir}/ivy" />
+	<property name="ivy.settings.file" value="${ivy.dir}/ivysettings.xml" />
+	<property name="ivy.cache.dir" value="${ivy.dir}/cache" />
+
+	<path id="GWT SDK [gwt-2.0.3 - 2.0.3].libraryclasspath">
+		<fileset dir="${ivy.cache.dir}">
+			<include name="**/*.jar" />
 		</fileset>
-    </path>
-    <path id="App Engine SDK [App Engine (2) - 1.3.6].libraryclasspath">
-	    <fileset dir="${ivy.cache.dir}">
-			<include name="**/*.jar"/>
+	</path>
+	<path id="TimadorusWebApp.classpath">
+		<path refid="GWT SDK [gwt-2.0.3 - 2.0.3].libraryclasspath" />
+		<fileset dir="war/WEB-INF/lib/">
+			<include name="*.jar" />
 		</fileset>
-    </path>
-    <path id="TimadorusWebApp.classpath">
-        <path refid="GWT SDK [gwt-2.0.3 - 2.0.3].libraryclasspath"/>
-	    <path refid="App Engine SDK [App Engine (2) - 1.3.6].libraryclasspath"/>
-        <pathelement location="war/WEB-INF/classes"/>
-    </path>
-	
-	<!-- ================================= 
+		<pathelement location="war/WEB-INF/classes" />
+	</path>
+
+	<!-- =================================  
 	          target: resolve
 	     
 	     let ivy handle depencies to other projects                   
 	     ================================= -->
-    <target name="resolve" description="--> retrieve dependencies with ivy">
-    	<ivy:settings file="${ivy.settings.file}" />
-        <ivy:retrieve />    	
-    </target>
+	<target name="resolve" description="--> retrieve dependencies with ivy">
+		<ivy:settings file="${ivy.settings.file}" />
+		<ivy:retrieve />
+	</target>
 
-    <target name="init">
-        <mkdir dir="war/WEB-INF/classes"/>
-        <copy includeemptydirs="false" todir="war/WEB-INF/classes">
-            <fileset dir="src">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-    </target>
+	<target name="init">
+		<mkdir dir="war/WEB-INF/classes" />
+		<copy includeemptydirs="false" todir="war/WEB-INF/classes">
+			<fileset dir="src">
+				<exclude name="**/*.launch" />
+				<exclude name="**/*.java" />
+			</fileset>
+		</copy>
+	</target>
 
 	<target name="clean">
-        <delete dir="war/WEB-INF/classes"/>
-    </target>
-    
-	<target depends="clean" name="cleanall"/>
-	
-	
-    <target name="build-subprojects"/>
+		<delete dir="war/WEB-INF/classes" />
+	</target>
+
+	<target depends="clean" name="cleanall" />
+
+
+	<target name="build-subprojects" />
 
 	<target name="java-compile" depends="init">
-        <javac debug="true" debuglevel="${debuglevel}" destdir="war/WEB-INF/classes" source="${source}" target="${target}">
-            <src path="src"/>
-            <classpath refid="TimadorusWebApp.classpath"/>
-        </javac>
-    </target>
+		<javac debug="true" debuglevel="${debuglevel}" destdir="${destination}" source="${source}" target="${target}">
+			<src path="src" />
+			<classpath refid="TimadorusWebApp.classpath" />
+		</javac>
+	</target>
 
-	<target  name="build" depends="resolve,java-compile"/>
+	<target name="enhance" description="DataNucleus enhancement">
+		<taskdef name="datanucleusenhancer" classpathref="TimadorusWebApp.classpath" classname="org.datanucleus.enhancer.tools.EnhancerTask" />
+		<datanucleusenhancer failonerror="true" verbose="true">
+			<fileset dir="${destination}">
+				<include name="**/*.class" />
+			</fileset>
+			<classpath refid="TimadorusWebApp.classpath" />
+		</datanucleusenhancer>
+	</target>
+
+	<target name="build" depends="resolve,java-compile" />
 </project>
