--- a/.classpath
+++ b/.classpath
@@ -7,14 +7,15 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/asm-3.1.jar"/>
+	<classpathentry exported="true" kind="con" path="DERBY_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/asm-3.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-collections-3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-dbcp-1.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/commons-pool-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-cache-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-connectionpool-2.0.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.1.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-enhancer-2.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-core-2.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-enhancer-2.1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-googlecollections-2.1.0-release.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-javaxtime-2.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/datanucleus-jodatime-2.1.1.jar"/>
@@ -36,11 +37,12 @@
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/gwt-user-2.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/hsqldb-1.8.0.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/jdo-api-3.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/jdo-api-3.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/jdo2-api-2.3-eb.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/joda-time-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/jsr107cache-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/log4j-1.2.14.jar"/>
 	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/time-api-0.6.jar"/>
-	<classpathentry kind="con" path="DERBY_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="war/WEB-INF/lib/transaction-api-1.1.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
