--- a/build.xml
+++ b/build.xml
@@ -29,6 +29,7 @@
 	     let ivy handle depencies to other projects                   
 	     ================================= -->
 	<target name="resolve" description="--> retrieve dependencies with ivy">
+		<ivy:cleancache />
 		<ivy:settings file="${ivy.settings.file}" />
 		<ivy:retrieve />
 	</target>
@@ -50,7 +51,7 @@
 
 	<target name="clean">
 		<delete dir="${destination}" />
-		<delete dir="${destinationLib}" failonerror="false" />
+		<delete dir="${destinationLib}" failonerror="false" />		
 	</target>
 
 	<target depends="clean" name="cleanall" />
