--- a/ivy.xml
+++ b/ivy.xml
@@ -3,7 +3,7 @@
 	<dependencies>
 		<dependency org="com.google" name="gwt" rev="2.0.4" />
 		<dependency org="org.datanucleus" name="datanucleus-enhancer" rev="2.1.2" conf="*->default" />
-		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="2.1.2" conf="*->default"/>
+		<dependency org="org.datanucleus" name="datanucleus-rdbms" rev="2.1.2" conf="*->default,provided"/>
 		<dependency org="org.apache.derby" name="derby" rev="10.6.2.1" conf="*->default" />
 		<dependency org="org.apache.derby" name="derbyclient" rev="10.6.2.1" conf="*->default" />
 		<dependency org="org.apache.derby" name="derbynet" rev="10.6.2.1" conf="*->default" />
